<resources>
    <string name="app_name">Retro Games</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error">Error</string>
    <string name="press_to_continue">Tap to continue</string>
    <string name="level">Level: %d</string>

    <string name="server_client_id" translatable="false">53291687012-d9m50t310lovh7mhb8np09qkm8r936ef.apps.googleusercontent.com</string>

    <!--MainActivityPong -->
    <string name="mode_ready">Touch to play</string>
    <string name="mode_pause">Paused</string>
    <string name="mode_win">Good work</string>
    <string name="mode_lose">CPU score</string>
    <string name="menu_new_game">New game</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_resume">Resume</string>
    <string name="default_score" translatable="false">0    0</string>

    <string name="no_point">You have not made a single point</string>
    <string name="you_try">You tried</string>
    <string name="good_job">New highscore congratulations!</string>

    <!--WelcomeFragment-->
    <string name="next">Next</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_info">In RetroGames you have all your favorite arcade video games on your smartphone.</string>

    <!--LoginFragment-->
    <string name="login">Login</string>
    <string name="first_access_info">By logging in you can share your scores and compete with the network in the ranking.</string>
    <string name="continue_without_logging_in"><u>Continue without logging in</u></string>

    <!--Fragment_Home-->
    <string name="tetris" translatable="false">Tetris</string>
    <string name="highscore">Highscore:</string>
    <string name="games">Games</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="play_game">Play!</string>
    <string name="pong" translatable="false">Pong</string>
    <string name="breakout" translatable="false">Breakout</string>
    <string name="hole" translatable="false">Hole</string>
    <string name="snake" translatable="false">Snake</string>

    <!-- Login activity -->
    <string name="emailTextFieldHint" translatable="false">Email</string>
    <string name="passwordTextFieldHint" translatable="false">Password</string>
    <string name="login_phrase">Don\'t have an account?</string>
    <string name="signIn"><u>Sign in</u></string>
    <string name="or">OR</string>
    <string name="signInGoogle">SIGN IN WITH GOOGLE</string>
    <string name="nickname" translatable="false">Nickname</string>
    <string name="password" translatable="false">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_content">Username or password wrong</string>
    <string name="error_google_dialog_content">Sign in with Google failed</string>
    <string name="error_edittext_mail">Incorrect email</string>
    <string name="error_edittext_password">Too short password</string>

    <!-- Fragment_Profile -->
    <string name="profile">Profile</string>
    <string name="total_score_profile">Total score:</string>
    <string name="global_ranking">in global ranking</string>
    <string name="single_score">Single score</string>
    <string name="position_default">Not ranked yet</string>
    <string name="zero">zero</string>
    <string name="name">Name</string>
    <string name="logout_img">logout image</string>
    <string name="profile_img">profile image</string>
    <string name="pong_profile" translatable="false">Pong:</string>
    <string name="breakout_profile" translatable="false">Breakout:</string>
    <string name="hole_profile" translatable="false">Hole:</string>
    <string name="snake_profile" translatable="false">Snake:</string>
    <string name="tetris_profile" translatable="false">Tetris:</string>

    <!-- Registration activity -->
    <string name="registration_title">New account</string>
    <string name="error_edittext_username">The username already exists</string>
    <string name="dialog_registration_succes">You have been successfully registered!\n\nCheck your inbox to confirm the email\nIf you use Gmail, take care, that your email is not arrived in promotion table</string>
    <string name="dialog_registrazion_error">Registration error</string>
    <string name="error_wrong_email">Wrong email</string>
    <string name="error_short_username">Too short username</string>
    <string name="error_short_password">The password is too short</string>
    <string name="error_match_password">Password doesn\'t match</string>
    <string name="info_registraion">The password can contain all types of characters but must be at least 8 characters long</string>
    <string name="dialog_ok" translatable="false">Ok</string>


    <!-- Fragment Leaderboard -->
    <string name="total_score">Total score</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="title_activity_prova" translatable="false">prova</string>
    <string name="game_name" translatable="false">Game_Name</string>
    <string name="_0" translatable="false">0</string>
    <string name="loading_leaderboard">Loading leaderboard…</string>
    <string name="position"># place</string>
    <string name="leaderboard_noConnection">Cannot load leaderboard without connection.\nTry later.</string>

    <!-- Tetris -->
    <string name="gameOver">Game over!</string>
    <string name="your_score_is">Your score is </string>
    <string name="again">Again</string>
    <string name="exit">Exit</string>
    <string name="high_score">High Score: </string>
    <string name="score">Score : </string>
    <string name="tetris_welcome">Welcome to Tetris!</string>
    <string name="tetris_tutorial">The goal of the game is to make as many points as possible by creating a horizontal row of blocks without interruption.\nBut be careful! If the blocks placed reach the top of the screen the game ends.\n\nCOMMANDS:\nRight button to move the block to the right\nLeft button to move the block to the left\nButton down to increase block speed\nWheel button to rotate the block</string>


    <!-- Snake -->
    <string name="default_highscore_snake">Highscore: 0</string>
    <string name="default_score_snake">Score: 0</string>
    <string name="snake_welcome">Welcome to Snake!</string>
    <string name="snake_tutorial">The goal of the game is to control the snake by trying to eat as many fruits as possible.\nBut be careful not to eat yourself! The walls can be crossed and 3 difficulties are available.\n\nCOMMANDS:\nUse the Directional pad to move the Snake! Easy not?!</string>
    <string name="game_pause_snake">Game in pause.\nTouch to resume</string>

    <!-- Snake dialog -->
    <string name="snake_dialog_title">Select the difficulty of the game</string>
    <string name="snake_dialog_easy">Easy</string>
    <string name="snake_dialog_medium">Medium</string>
    <string name="snake_dialog_hard">Hard</string>


    <!-- Hole -->
    <string name="start_game">START GAME</string>
    <string name="high_score_">High score:</string>
    <string name="score_0">Score: 0</string>
    <string name="life_3">Life: 3</string>
    <string name="you_hit_the_wall">You hit the wall!</string>
    <string name="hole_welcome">Welcome to Hole!</string>
    <string name="hole_tutorial">The goal of the game is to move the blue racket to avoid goals and to try to score goals.\nThe score is determined by the number of goals scored minus the number of goals conceded.\n\nCOMMANDS:\nHold down on the screen and move your finger to determine the position of the racket</string>


    <!-- Breakout -->
    <string name="breakout_welcome">Welcome to Breakout!</string>
    <string name="breakout_tutorial">The goal of the game is to break as many bricks as you can by bouncing the ball.\nIf the ball reaches the bottom of the screen you will lose a life!\nLosing all three lives, the game ends.\n\nCOMMANDS:\nTap the left or right half of the screen to move left or right respectively.</string>

    <plurals name="life">
        <item quantity="zero">Life:</item>
        <item quantity="one">Life:</item>
        <item quantity="other">Lifes:</item>
    </plurals>

    <!-- Pong -->
    <string name="pong_welcome">Welcome to Pong!</string>
    <string name="pong_tutorial">The goal of the game is to move the blue racket to avoid goals and to try to score goals.\nThe score is determined by the number of goals scored minus the number of goals conceded.\n\nCOMMANDS:\nHold down on the screen and move your finger to determine the position of the racket</string>


</resources>
